fix image stretch

--- a/styles/sass/_media.scss
+++ b/styles/sass/_media.scss
@@ -84,8 +84,8 @@
   // Portfolio Stack to two column
   .portfolio {
     ul {
-      grid-template-columns: repeat(2, 1fr); 
-      grid-template-rows: repeat(3, 1fr);
+      grid-template-columns: 2, 1fr; 
+      grid-template-rows: 3, 1fr;
       justify-items: center;
     }
   }
@@ -127,8 +127,8 @@
   }
   .portfolio {
     ul {
-      grid-template-columns: repeat(1, 1fr); 
-      grid-template-rows: repeat(6, 1fr);
+      grid-template-columns: 1, 1fr; 
+      grid-template-rows: 6, 1fr;
       grid-gap: 20px;
       justify-items: center;
     }
