--- a/styles/sass/_projects.scss
+++ b/styles/sass/_projects.scss
@@ -43,8 +43,8 @@
     width: 80%;
     display: grid;
     grid-gap: 30px;
-    grid-template-columns: repeat(3, 1fr); 
-    grid-template-rows: repeat(2, 1fr);
+    grid-template-columns: 3, 1fr; 
+    grid-template-rows: 2, 1fr;
     margin: 0 auto;
   }
   li {
